--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChooseAMovie</string>
+    <string name="title">Title</string>
+    <string name="add">Add</string>
+    <string name="search">Search</string>
 </resources>
